@@ -7,7 +7,7 @@ import java.awt.geom.Rectangle2D;
 import edu.colorado.phet.common.phetcommon.view.graphics.transforms.ModelViewTransform;
 
 /**
- * Node that (when parameterized correctly) can be used to represent grass-covered ground
+ * Node that (when parametrized correctly) can be used to represent grass-covered ground
  * in a simulation.
  *
  * @author John Blanco
@@ -15,6 +15,10 @@ import edu.colorado.phet.common.phetcommon.view.graphics.transforms.ModelViewTra
  */
 public class GroundNode extends GradientBackgroundNode {
     public GroundNode( ModelViewTransform mvt, Rectangle2D modelRect, double modelGradientDepth ) {
-        super( mvt, modelRect, new Color( 144, 199, 86 ), new Color( 103, 162, 87 ), 0, -modelGradientDepth );
+        this( mvt, modelRect, modelGradientDepth, new Color( 144, 199, 86 ), new Color( 103, 162, 87 ) );
+    }
+
+    public GroundNode( ModelViewTransform mvt, Rectangle2D modelRect, double modelGradientDepth, Color topColor, Color bottomColor ) {
+        super( mvt, modelRect, topColor, bottomColor, 0, -modelGradientDepth );
     }
 }
