@@ -78,6 +78,7 @@ public class FluidPressureAndFlowResources {
     //Images
     public static class Images {
         public static final BufferedImage DRAIN_FAUCET_ATTACHED = RESOURCES.getImage( "drain-faucet-attached.png" );
+        public static final BufferedImage GRASS_TEXTURE = RESOURCES.getImage( "grass-texture.png" );
         public static final BufferedImage HANDLE = RESOURCES.getImage( "handle.png" );
         public static final BufferedImage KNOB = RESOURCES.getImage( "knob.png" );
         public static final BufferedImage MASS = RESOURCES.getImage( "mass.png" );
